--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,7 @@ services:
   - type: web
     name: telegram-bot
     env: python
-    buildCommand: ""
+    buildCommand: bash build.sh
     startCommand: python bot_telegram/my_bot_v2.py
     envVars:
       - key: BOT_TOKEN
