--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,1 @@
-services:
-  - type: web
-    name: telegram-bot
-    env: python
-    buildCommand: bash build.sh
-    startCommand: python bot_telegram/my_bot_v2.py
-    envVars:
-      - key: BOT_TOKEN
-        sync: false
+PYTHON_VERSION = 3.11.9
